crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__lexer__recognizes_identifiers_with_underscores_and_digits.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
_ x0 x_y a1_b2

syntax:
syntax:
KotlinFile
  AnnotationList
  ImportDirectiveList
  KotlinFileItemList
    Statement
      ExpressionStatement
        BinaryExpression
          NameExpression
            Identifier "_" @ 0..1 trailing=[Whitespace " "]
          Identifier "x0" @ 2..4 trailing=[Whitespace " "]
          NameExpression
            Identifier "x_y" @ 5..8 trailing=[Whitespace " "]
        ErrorNode
          Identifier "a1_b2" @ 9..14
      TerminatorList
  Eof "" @ 15..15 leading=[Newline "\n"]

diagnostics:
  code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=9..14 message="unexpected token in expression"

diagnostics:
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(9), end: TextSize(14) }) message=unexpected token in expression
