crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__lexer__recognizes_line_string_content_and_escapes.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
"a\n\t\"\\\u0041"

syntax:
syntax:
KotlinFile
  AnnotationList
  KotlinFileItemList
    Statement
      ExpressionStatement
        StringTemplateExpression
          StringTemplateEntryList
            StringTemplateEntry
              OpenQuote "\"" @ 0..1
            StringTemplateEntry
              RegularStringPart "a" @ 1..2
            StringTemplateEntry
              EscapeSequence "\\n" @ 2..4
            StringTemplateEntry
              EscapeSequence "\\t" @ 4..6
            StringTemplateEntry
              EscapeSequence "\\\"" @ 6..8
            StringTemplateEntry
              EscapeSequence "\\\\" @ 8..10
            StringTemplateEntry
              EscapeSequence "\\u0041" @ 10..16
          ClosingQuote "\"" @ 16..17
      TerminatorList
  Eof "" @ 18..18 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
