crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__lexer__recognizes_long_string_template_with_nested_braces.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
"sum ${list.map { it + 1 }}"

syntax:
syntax:
KotlinFile
  AnnotationList
  ImportDirectiveList
  KotlinFileItemList
    Statement
      ExpressionStatement
        StringTemplateExpression
          StringTemplateEntryList
            StringTemplateEntry
              OpenQuote "\"" @ 0..1
            StringTemplateEntry
              RegularStringPart "sum " @ 1..5
            StringTemplateEntry
              LongStringTemplateEntry
                LongTemplateEntryStart "${" @ 5..7
                CallExpression
                  NavigationExpression
                    NameExpression
                      Identifier "list" @ 7..11
                    Dot "." @ 11..12
                    Identifier "map" @ 12..15 trailing=[Whitespace " "]
                  TypeArgumentListList
                  LambdaExpressionList
                    LambdaExpression
                      LambdaBody
                        LBrace "{" @ 16..17 trailing=[Whitespace " "]
                        LambdaBodyItemList
                          Statement
                            ExpressionStatement
                              BinaryExpression
                                NameExpression
                                  Identifier "it" @ 18..20 trailing=[Whitespace " "]
                                Plus "+" @ 21..22 trailing=[Whitespace " "]
                                LiteralExpression
                                  IntegerLiteral "1" @ 23..24 trailing=[Whitespace " "]
                            TerminatorList
                        RBrace "}" @ 25..26
                LongTemplateEntryEnd "}" @ 26..27
          ClosingQuote "\"" @ 27..28
      TerminatorList
  Eof "" @ 29..29 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
