crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__lexer__recognizes_multi_dollar_line_string_interpolation.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
$$"price $amount and $$name and $${expr}"

syntax:
syntax:
KotlinFile
  AnnotationList
  KotlinFileItemList
    Statement
      ExpressionStatement
        StringTemplateExpression
          StringTemplateEntryList
            StringTemplateEntry
              StringTemplateContent
                InterpolationPrefix "$$" @ 0..2
            StringTemplateEntry
              StringTemplateContent
                OpenQuote "\"" @ 2..3
            StringTemplateEntry
              StringTemplateContent
                RegularStringPart "price " @ 3..9
            StringTemplateEntry
              StringTemplateContent
                RegularStringPart "$" @ 9..10
            StringTemplateEntry
              StringTemplateContent
                RegularStringPart "amount and " @ 10..21
            StringTemplateEntry
              StringTemplateContent
                ShortTemplateEntryStart "$$" @ 21..23
            StringTemplateEntry
              StringTemplateContent
                Identifier "name" @ 23..27
            StringTemplateEntry
              StringTemplateContent
                RegularStringPart " and " @ 27..32
            StringTemplateEntry
              StringTemplateContent
                LongStringTemplateEntry
                  LongTemplateEntryStart "$${" @ 32..35
                  NameExpression
                    Identifier "expr" @ 35..39
                  LongTemplateEntryEnd "}" @ 39..40
          ClosingQuote "\"" @ 40..41
      TerminatorList
  Eof "" @ 42..42 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
