crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__lexer__recognizes_raw_string_content.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
"""one " quote
two \ slash"""

syntax:
syntax:
KotlinFile
  AnnotationList
  ImportDirectiveList
  KotlinFileItemList
    Statement
      ExpressionStatement
        StringTemplateExpression
          StringTemplateEntryList
            StringTemplateEntry
              OpenQuote "\"\"\"" @ 0..3
            StringTemplateEntry
              RegularStringPart "one " @ 3..7
            StringTemplateEntry
              RegularStringPart "\"" @ 7..8
            StringTemplateEntry
              RegularStringPart " quote" @ 8..14
            StringTemplateEntry
              RegularStringPart "\n" @ 14..15
            StringTemplateEntry
              RegularStringPart "two " @ 15..19
            StringTemplateEntry
              RegularStringPart "\\" @ 19..20
            StringTemplateEntry
              RegularStringPart " slash" @ 20..26
          ClosingQuote "\"\"\"" @ 26..29
      TerminatorList
  Eof "" @ 30..30 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
