crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__lexer__recognizes_raw_string_template.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
"""hello ${name}"""

syntax:
syntax:
KotlinFile
  AnnotationList
  ImportList
    ImportDirectiveList
  KotlinFileItemList
    Statement
      ExpressionStatement
        StringTemplateExpression
          StringTemplateEntryList
            StringTemplateEntry
              OpenQuote "\"\"\"" @ 0..3
            StringTemplateEntry
              RegularStringPart "hello " @ 3..9
            StringTemplateEntry
              LongStringTemplateEntry
                LongTemplateEntryStart "${" @ 9..11
                NameExpression
                  Identifier "name" @ 11..15
                LongTemplateEntryEnd "}" @ 15..16
          ClosingQuote "\"\"\"" @ 16..19
      TerminatorList
  Eof "" @ 20..20 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
