crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__lexer__recognizes_reserved_ellipsis.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
...

syntax:
syntax:
KotlinFile
  ImportList
  Statement
    ExpressionStatement
      ErrorNode
        Reserved "..." @ 0..3
  Eof "" @ 4..4 leading=[Newline "\n"]

diagnostics:
  code=kotlin.parse.expected_syntax severity=Error stage=Parser range=0..3 message="expected expression"

diagnostics:
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(0), end: TextSize(3) }) message=expected expression
