crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__lexer__recognizes_safe_cast_and_question_operators.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
as? a?.b a ?: b T? ::ref

syntax:
syntax:
KotlinFile
  AnnotationList
  KotlinFileItemList
    Statement
      ExpressionStatement
        BinaryExpression
          BinaryExpression
            BinaryExpression
              BogusExpression
                AsSafe "as?" @ 0..3 trailing=[Whitespace " "]
              NavigationExpression
                NameExpression
                  Identifier "a" @ 4..5
                SplitSafeNavigationOperator
                  Question "?" @ 5..6
                  Dot "." @ 6..7
                Identifier "b" @ 7..8 trailing=[Whitespace " "]
            BinaryExpression
              NameExpression
                Identifier "a" @ 9..10 trailing=[Whitespace " "]
              Elvis "?:" @ 11..13 trailing=[Whitespace " "]
              NameExpression
                Identifier "b" @ 14..15 trailing=[Whitespace " "]
          CallableReferenceExpression
            CallableReferenceReceiver
              TypeReference
                NullableType
                  UserType
                    UserTypeSegmentList
                      UserTypeSegment
                        Identifier "T" @ 16..17
                  Question "?" @ 17..18 trailing=[Whitespace " "]
            ColonColon "::" @ 19..21
            CallableReferenceTarget
              Identifier "ref" @ 21..24
            TypeArgumentListList
      TerminatorList
  Eof "" @ 25..25 leading=[Newline "\n"]

diagnostics:
  code=kotlin.parse.expected_syntax severity=Error stage=Parser range=0..3 message="expected expression"
  code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=4..5 message="unexpected token in expression"
  code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=9..10 message="unexpected token in expression"
  code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=16..17 message="unexpected token in expression"

diagnostics:
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(0), end: TextSize(3) }) message=expected expression
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(4), end: TextSize(5) }) message=unexpected token in expression
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(9), end: TextSize(10) }) message=unexpected token in expression
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(16), end: TextSize(17) }) message=unexpected token in expression
