crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__lexer__recognizes_shebang_line.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
#!/usr/bin/env kotlin
val x = 1

syntax:
syntax:
KotlinFile
  ImportList
  PropertyDeclaration
    ValKw "val" @ 22..25 leading=[ShebangComment "#!/usr/bin/env kotlin", Newline "\n"] trailing=[Whitespace " "]
    CallableName
      Name
        Identifier "x" @ 26..27 trailing=[Whitespace " "]
    Assign "=" @ 28..29 trailing=[Whitespace " "]
    LiteralExpression
      IntegerLiteral "1" @ 30..31
  Eof "" @ 32..32 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
