crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__lexer__recognizes_short_string_template.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
"hello $name and $this"

syntax:
syntax:
KotlinFile
  AnnotationList
  ImportList
    ImportDirectiveList
  KotlinFileItemList
    Statement
      ExpressionStatement
        StringTemplateExpression
          StringTemplateEntryList
            StringTemplateEntry
              OpenQuote "\"" @ 0..1
            StringTemplateEntry
              RegularStringPart "hello " @ 1..7
            StringTemplateEntry
              ShortTemplateEntryStart "$" @ 7..8
            StringTemplateEntry
              Identifier "name" @ 8..12
            StringTemplateEntry
              RegularStringPart " and " @ 12..17
            StringTemplateEntry
              ShortTemplateEntryStart "$" @ 17..18
            StringTemplateEntry
              ThisKw "this" @ 18..22
          ClosingQuote "\"" @ 22..23
      TerminatorList
  Eof "" @ 24..24 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
